Crash (segfault) when scaling with mirroring on. #78600

Closed
opened 2020-07-04 14:15:33 +02:00 by Martijn Versteegh · 6 comments

System Information
Operating system: Linux-5.4.0-40-generic-x86_64-with-debian-bullseye-sid 64 Bits
Graphics card: GeForce GTX 760/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 435.21

Blender Version
Broken: version: 2.90.0 Alpha, branch: master, commit date: 2020-07-03 10:56, hash: aab41401f9
Worked: 2.83

Short description of error
If I first scale to zero in the z direction and then scale again, I get a segfault when mirroring is turned on.

Exact steps for others to reproduce the error

  • default startup
  • go to edit mode
  • turn on mirroring in the X direction (at the top of the 3d view, next to the 'butterfly' icon)
  • scale to zero in the z direction. (s, z, 0, ENTER)
  • scale again (s) => segfault

backtrace:

- 0  in copy_v3_v3 (r=0x3f8000003f800000, a=0x2) at /home/martijn/progs/blender-git/blender/source/blender/blenlib/intern/math_vector_inline.c:63
- 1  in transform_apply_to_mirror (t=) at /home/martijn/progs/blender-git/blender/source/blender/editors/transform/transform_convert_mesh.c:1373
- 2  in recalcData_mesh (t=) at /home/martijn/progs/blender-git/blender/source/blender/editors/transform/transform_convert_mesh.c:1397
- 3  in recalcData (t=) at /home/martijn/progs/blender-git/blender/source/blender/editors/transform/transform_convert.c:1530
- 4  in applyResize (t=, UNUSED_mval=) at /home/martijn/progs/blender-git/blender/source/blender/editors/transform/transform_mode_resize.c:161
- 5  in transformApply (C=, t=) at /home/martijn/progs/blender-git/blender/source/blender/editors/transform/transform.c:2097
#6  in transform_modal (C=, op=, event=) at /home/martijn/progs/blender-git/blender/source/blender/editors/transform/transform_ops.c
:441
#7  in wm_handler_operator_call (C=, handlers=, handler_base=, event=, properties=0x0, kmi_idname=0x0) at /home/martijn/
progs/blender-git/blender/source/blender/windowmanager/intern/wm_event_system.c:2018
#8  in wm_handlers_do_intern (C=, event=, handlers=) at /home/martijn/progs/blender-git/blender/source/blender/windowmanager/intern/wm
_event_system.c:2806
#9  in wm_handlers_do (C=, event=, handlers=) at /home/martijn/progs/blender-git/blender/source/blender/windowmanager/intern/wm_event_
system.c:2854
- 10  in wm_event_do_handlers (C=) at /home/martijn/progs/blender-git/blender/source/blender/windowmanager/intern/wm_event_system.c:3283
- 11  in WM_main (C=) at /home/martijn/progs/blender-git/blender/source/blender/windowmanager/intern/wm.c:475
#12  in main (argc=1, argv=) at /home/martijn/progs/blender-git/blender/source/creator/creator.c:532
**System Information** Operating system: Linux-5.4.0-40-generic-x86_64-with-debian-bullseye-sid 64 Bits Graphics card: GeForce GTX 760/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 435.21 **Blender Version** Broken: version: 2.90.0 Alpha, branch: master, commit date: 2020-07-03 10:56, hash: `aab41401f9` Worked: 2.83 **Short description of error** If I first scale to zero in the z direction and then scale again, I get a segfault when mirroring is turned on. **Exact steps for others to reproduce the error** - default startup - go to edit mode - turn on mirroring in the X direction (at the top of the 3d view, next to the 'butterfly' icon) - scale to zero in the z direction. (s, z, 0, ENTER) - scale again (s) => segfault backtrace: ``` - 0 in copy_v3_v3 (r=0x3f8000003f800000, a=0x2) at /home/martijn/progs/blender-git/blender/source/blender/blenlib/intern/math_vector_inline.c:63 - 1 in transform_apply_to_mirror (t=) at /home/martijn/progs/blender-git/blender/source/blender/editors/transform/transform_convert_mesh.c:1373 - 2 in recalcData_mesh (t=) at /home/martijn/progs/blender-git/blender/source/blender/editors/transform/transform_convert_mesh.c:1397 - 3 in recalcData (t=) at /home/martijn/progs/blender-git/blender/source/blender/editors/transform/transform_convert.c:1530 - 4 in applyResize (t=, UNUSED_mval=) at /home/martijn/progs/blender-git/blender/source/blender/editors/transform/transform_mode_resize.c:161 - 5 in transformApply (C=, t=) at /home/martijn/progs/blender-git/blender/source/blender/editors/transform/transform.c:2097 #6 in transform_modal (C=, op=, event=) at /home/martijn/progs/blender-git/blender/source/blender/editors/transform/transform_ops.c :441 #7 in wm_handler_operator_call (C=, handlers=, handler_base=, event=, properties=0x0, kmi_idname=0x0) at /home/martijn/ progs/blender-git/blender/source/blender/windowmanager/intern/wm_event_system.c:2018 #8 in wm_handlers_do_intern (C=, event=, handlers=) at /home/martijn/progs/blender-git/blender/source/blender/windowmanager/intern/wm _event_system.c:2806 #9 in wm_handlers_do (C=, event=, handlers=) at /home/martijn/progs/blender-git/blender/source/blender/windowmanager/intern/wm_event_ system.c:2854 - 10 in wm_event_do_handlers (C=) at /home/martijn/progs/blender-git/blender/source/blender/windowmanager/intern/wm_event_system.c:3283 - 11 in WM_main (C=) at /home/martijn/progs/blender-git/blender/source/blender/windowmanager/intern/wm.c:475 #12 in main (argc=1, argv=) at /home/martijn/progs/blender-git/blender/source/creator/creator.c:532 ```
Author
Member

Added subscriber: @Baardaap

Added subscriber: @Baardaap

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Added subscriber: @mont29

Added subscriber: @mont29

the problem is that BMesh code only detects two mirror pairs insted of four, because of vertices sharing the same exact location... Not sure yet how to properly fix that, needs more understanding of exact behavior of the code involved.

the problem is that BMesh code only detects two mirror pairs insted of four, because of vertices sharing the same exact location... Not sure yet how to properly fix that, needs more understanding of exact behavior of the code involved.

This issue was referenced by 1ff1a2be9c

This issue was referenced by 1ff1a2be9c6badc0b410a5c0e9731e505fae14ea

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Germano Cavalcante self-assigned this 2020-07-31 16:25:30 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser Project (Legacy)
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#78600
No description provided.