Fix T78600: Crash when transforming doubles with mirroring on

`EDBM_verts_mirror_cache_begin_ex` could do a better work avoiding these
duplicates, but this is a separate problem.